--- a/src/content/translations/en/layout.json
+++ b/src/content/translations/en/layout.json
@@ -1,5 +1,7 @@
 {
   "footer.copyright": "&copy; 2024 Antti Kivi",
+  "footer.locale.en": "In English",
+  "footer.locale.fi": "Suomeksi",
   "footer.navigation.terms.dataProtection": "Data protection",
   "logo.alt": "The letters A and K as eyes of a smiling face.",
   "main.id": "main",
