--- a/src/content/translations/fi/layout.json
+++ b/src/content/translations/fi/layout.json
@@ -1,5 +1,7 @@
 {
   "footer.copyright": "&copy; 2024 Antti Kivi",
+  "footer.locale.en": "In English",
+  "footer.locale.fi": "Suomeksi",
   "footer.navigation.terms.dataProtection": "Tietosuoja",
   "logo.alt": "Kirjaimet A ja K hymyilevien kasvojen silminä.",
   "main.id": "sisalto",
