--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,2 +1,5 @@
 main-id = "main"
 skip-to-content = "Skip to content"
+
+[languageMenuLabel]
+  other = "The current language is {{ .Language.LanguageName }}. Choose your preferred language."
