--- a/i18n/fi.toml
+++ b/i18n/fi.toml
@@ -1,5 +1,5 @@
-main-id = "sisalto"
-skip-to-content = "Siirry sisältöön"
+mainID = "sisalto"
+skipToContent = "Siirry sisältöön"
 
 [languageMenuLabel]
   other = "Sivuston kieli on tällä hetkellä {{ .Language.LanguageName }}. Valitse, mitä kieltä haluat käyttää."
