feat: add social media links to the footer

--- a/i18n/fi.toml
+++ b/i18n/fi.toml
@@ -1,6 +1,8 @@
+instagramLogoAlt = "Instagramin logo"
 logoAlt = "Kirjaimet A ja K hymyilevien kasvojen silminä."
 mainID = "sisalto"
 skipToContent = "Siirry sisältöön"
+threadsLogoAlt = "Instagram Threadsin logo"
 
 [languageMenuLabel]
   other = "Sivuston kieli on tällä hetkellä {{ .Language.LanguageName }}. Valitse, mitä kieltä haluat käyttää."
