feat: add GitHub link to the footer

--- a/i18n/fi.toml
+++ b/i18n/fi.toml
@@ -1,3 +1,4 @@
+githubLogoAlt = "Githubin logo"
 instagramLogoAlt = "Instagramin logo"
 logoAlt = "Kirjaimet A ja K hymyilevien kasvojen silminä."
 mainID = "sisalto"
