--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -1,3 +1,4 @@
+githubLogoAlt = "GitHub logo"
 instagramLogoAlt = "Instagram logo"
 logoAlt = "The letters A and K as eyes of a smiling face."
 mainID = "main"
